--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "visual-sims",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://leticiasampaio.github.io/",
   "dependencies": {
     "@react-spring/three": "^9.1.2",
     "@react-three/drei": "^5.2.1",
@@ -9,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.13.1",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
